<resources>
    <string name="app_name">SCC Health</string>
    <string name="category_about">Project Details</string>
    <string name="category_arrhythmia">Arrhythmia</string>
    <string name="category_asthma">COPD</string>
    <string name="category_sleepapnea">Sleep apnea</string>
    <string name="category_bodytemp">Flu</string>
    <string name="category_lab">Diagnostic </string>
    <string name="category_profile">Create User Profiles</string>
    <string name="category_bluetooth">Setup Bluetooth</string>
    <string name="category_wifi">Manual Sharing with SCC</string>
    <string name="category_setting">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="desc">Step Count</string>
    <string name="title1">Today</string>
    <string name="unit1">Steps</string>
    <string name="menu_settings">menu</string>
    <string name="near_the">Near the</string>
    <string name="no_earthquakes">No earthquakes found.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Earthquake Settings</string>
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">6</string>
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_magnitude_value</string>
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Records</string>
    <string name="editor_activity_title_new_pet">Add a Patient</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="category_overview">Overview</string>
    <string name="category_gender">Gender</string>
    <string name="category_measurement">Measurement</string>
    <string name="hint_pet_name">Name</string>
    <string name="hint_pet_breed">Address</string>
    <string name="hint_pet_weight">Weight</string>
    <string name="unit_pet_weight">kg</string>
    <string name="gender_unknown">Unknown</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="empty_view_title_text">No Profile Created yet...</string>
    <string name="empty_view_subtitle_text">Get started by adding a patient</string>
    <string name="editor_activity_title_edit_pet">Edit Patient</string>
    <string name="editor_insert_pet_successful">Patient saved</string>
    <string name="editor_insert_pet_failed">Error with saving patient</string>
    <string name="editor_update_pet_successful">Patient updated</string>
    <string name="editor_update_pet_failed">Error with updating patient</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_pet_successful">Patient deleted</string>
    <string name="editor_delete_pet_failed">Error with deleting patientt</string>
    <string name="delete_dialog_msg">Delete this patient?</string>
    <string name="cancel">Cancel</string>
    <string name="unknown_breed">Unknown</string>
    <string name="Add_New">Add New</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">*Name</string>
    <string name="phone">*PID</string>
    <string name="email">Email</string>
    <string name="street">*Address</string>
    <string name="country">State/Zip</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hello_world">Hello world!</string>
    <string name="oneStop">One Stop Service</string>
    <string name="intro">This is a One Stop Service to monitor Flu, Sleep Apnea, Asthma and Arrhythmia. Please read info and instruction for details.</string>
    <string name="procedure">3A. Click on CONNECT SCANNER.\n3B. Click on your Scanner name.\n\n\n   </string>
    <string name="title_activity_listener">ListenerActivity</string>
    <string name="title_activity_auto_connect">AutoConnectActivity</string>
    <string name="title_activity_device_list">Bluetooth Devices</string>
    <string name="title_activity_terminal">TerminalActivity</string>
    <string name="info_sleepapnea"><b>Sleep Apnea</b>\n\nA sleep disorder that is marked by pauses in breathing of 10 seconds or more during sleep, and causes unrestful sleep. Symptoms include loud or abnormal snoring, daytime sleepiness, irritability, and depression.\n\nRef: US National Library of Medicine"</string>
    <string name="info_arrhythmia"><b>Arrhythmia</b>\n\nAn arrhythmia is a disorder of the heart rate (pulse) or heart rhythm. The heart can beat too fast (tachycardia), too slow (bradycardia), or irregularly.An arrhythmia can be harmless, a sign of other heart problems, or an immediate danger to your health.\n\nRef: US National Library of Medicine" </string>
    <string name="info_copd"><b>COPD</b>\n\nCOPD, or chronic obstructive pulmonary disease, is a progressive disease that makes it hard to breathe. Progressive means the disease gets worse over time.
\nCOPD can cause coughing that produces large amounts of mucus (a slimy substance), wheezing, shortness of breath, chest tightness, and other symptoms.\n\nRef: US National Institutes of Health"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inst_flu"><b>Instructions:</b>\n\n1. Put on the wearable Temperature Sensor.\n2. Power On the Scanner.\n3. Click on <b>Connect Scanner</b> button.\n4. Click on <b>Start Test</b> after getting connected. \n5. Click on <b>Compute</b> after data collection.\n6. Click on <b>Refresh</b> to start test again.\n\n</string>
    <string name="share_with_scc">Sharing helps you to keep track of your disease chronologically and also it helps to see the spatial ditribution of the disease within the city. \n\nBy clicking on SHARE, you accept to share anonymous severity data with the Smart and Connected Community.</string>
    <string name="info_flu"><b>Flu:</b>\n\nInfluenza commonly known as "the flu", is an infectious disease caused by an influenza virus. Symptoms can be mild to severe. The most common symptoms include: a high fever, runny nose, sore throat, muscle pains, headache, coughing, and feeling tired.\n\nNormal body temperature varies by person, age, activity, and time of day. The average normal body temperature is generally accepted as 98.6°F. Some studies have shown that the normal body temperature can have a wide range, from 97°F to 99°F . A temperature over 100.4°F most often means you have a fever caused by an infection or illness.
                \nRef: US National Library of Medicine</string>
    <string name="info_oss"><b>Information:</b>\n\n<b>One Stop Service</b> You can test four diseases viz. Flu, Sleep Apnea, COPD and Arrythmia at a time.
        \n\n<b>Flu</b>\nInfluenza commonly known as "the flu", is an infectious disease caused by an influenza virus. Symptoms can be mild to severe. The most common
        symptoms include: a high fever, runny nose, sore throat, muscle pains, headache, coughing, and feeling tired. A temperature over 100.4°F most often means you
        have a fever caused by an infection or illness.\nRef: US National Library of Medicine
        \n\n<b>Sleep Apnea</b>\nA sleep disorder that is marked by pauses in breathing of 10 seconds or more during sleep, and causes unrestful sleep
        Symptoms include loud or abnormal snoring, daytime sleepiness, irritability, and depression.\nRef: US National Library of Medicine"
        \n<b>COPD</b>\nCOPD, or chronic obstructive pulmonary disease, is a progressive disease that makes it hard to breathe. Progressive means the disease gets worse over time.COPD can cause coughing that produces large amounts of mucus (a slimy substance), wheezing, shortness of breath, chest tightness, and other symptoms.\nRef: US National Institutes of Health"
        \n\n<b>Arrhythmia</b>\nAn arrhythmia is a disorder of the heart rate (pulse) or heart rhythm. The heart can beat too fast (tachycardia), too fast (tachycardia), too slow (bradycardia), or irregularly.An arrhythmia can be harmless, a sign of other heart problems, or an immediate danger to your health.\nRef: US National Library of Medicine"
    </string>
    <string name="inst_oss">\n2. Turn on <b>Scanner</b> and place the Scanner above the sensor properly.\n3. Connect the Smartphone app with the scanner and collect data.\n4. Click Refresh button and collect data for Temperature,SpO2, ECG/Heart rate and respiration sensor one by one.\n5. Click on Compute to see the result.\n6. If a sensor is not available just skip that disease.</string>
</resources>