<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_connection_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/round_corner"
    android:orientation="vertical"
    tools:context="nsf.esarplab.scchealth.GeneralSettingsActivity">

    <TextView
        android:id="@+id/permission"
        style="@style/CategoryStyle"
        android:layout_margin="16dp"
        android:layout_height="70dp"
        android:textAlignment="center"
        android:background="@drawable/button"
        android:text=" Setup Permissions" />



    <TextView
        android:id="@+id/profile"
        style="@style/CategoryStyle"
        android:layout_margin="16dp"
        android:layout_height="70dp"
        android:textAlignment="center"
        android:background="@drawable/button"
        android:text="@string/category_profile" />
   <!-- <TextView
        android:id="@+id/useraccount"
        style="@style/CategoryStyle"
        android:layout_margin="16dp"
        android:layout_height="70dp"
        android:textAlignment="center"
        android:background="@drawable/button"
        android:text=" Create User Password" />-->

    <TextView
        android:id="@+id/bluetooth"
        style="@style/CategoryStyle"
        android:layout_margin="16dp"
        android:layout_height="70dp"
        android:background="@drawable/button"
        android:textAlignment="center"
        android:text="@string/category_bluetooth" />

    <TextView
        android:id="@+id/wifi"
        style="@style/CategoryStyle"
        android:layout_margin="16dp"
        android:layout_height="70dp"
        android:background="@drawable/button"
        android:textAlignment="center"
        android:text="@string/category_wifi" />



</LinearLayout>